Fix spacing in Hero and Header

--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -3,6 +3,7 @@
 .logo {
   margin-top: 62px;
   margin-left: 40px;
+  margin-bottom: 100px;
 }
 
 .line {
