--- a/src/components/layout/Hero/Hero.module.css
+++ b/src/components/layout/Hero/Hero.module.css
@@ -11,7 +11,7 @@ h1 {
 
 @media screen and (min-width: 901px) {
   .hero {
-    margin-top: 230px;
+    margin-top: 130px;
   }
 
   .box {
